--- a/example.html
+++ b/example.html
@@ -26,11 +26,13 @@
         color0: "#ffae23", // CSS string
         color1: [ 0, 128, 255 ], // RGB array
         color2: [ 0, 128, 255, 0.3 ], // RGB with alpha
-        color3: { h: 350, s: 0.9, v: 0.3 } // Hue, saturation, value
+        color3: { h: 350, s: 0.9, v: 0.3 }, // Hue, saturation, value
+        color4: { h: 350, s: 0.9, v: 0.3 } // Hue, saturation, value
     };
 
     var gui = new dat.gui.GUI();
 
+    gui.enableMidi();
     gui.remember(obj);
 
     gui.add(obj, 'message');
@@ -51,6 +53,9 @@
     f1.addColor(obj, 'color1');
     f1.addColor(obj, 'color2');
     f1.addColor(obj, 'color3');
+
+    var subf = f1.addFolder('subf');
+    subf.addColor(obj, 'color4')
 
     var f2 = gui.addFolder('Another Folder');
     f2.add(obj, 'noiseStrength');
